kubernetes_examples/traefik/example1/Ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: "foo"
  namespace: default

spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            backend:
              serviceName: app-nginx
              servicePort: 80
          - path: /foo
            backend:
              serviceName: app-mynginx
              servicePort: 80
